of changes in the main development branch, consult the version control
history.


Current development version (branch VERSION_0_3_FIXES)
======================================================

* Fix bug in SgTimeControl that caused it to allocate infinite time for move
  if GetPositionInfo() returned zero for remaining moves
* Add missing files regression/*.suite to distribution
* Small fixes in documentation


Version 0.3 - 2008 Dec 17
=========================

* Change some default settings to be more friendly to end users (e.g.
  automatic loading of opening book, set ignore_clock to 0)
* New parameter GoUctPlayer::ResignMinGames
* Filter moves on empty edge in GoUctDefaultRootFilter
* Added fillboard and nakade heuristic as described in recent MoGo paper
  (not enabled by default)
* reg_genmove uses now the time limit set with go_param timelimit
* Use weighted RAVE updates in SgUctSearch
* Prune nodes with low visit counts if the tree runs out of memory
* Use different counts in the prior knowledge for small and large board sizes
* New command go_sentinel_file
* Use float type for counts in SgUctNode to allow fractional counts in prior
  knowledge
* Add a locality bonus in prior knowledge (caused a big playing strength
  increase on 19x19)
* New parameter SgUctSearch::VirtualLoss
* New parameter GoUctGlobalSearchStateParam::m_lengthModification (used on
  19x19)
* Use real time as default mode for SgTime
* Don't use SgTimeControl::ReserveMoveConstant anymore
* Other improvements and fixes


Version 0.2 - 2008 Aug 28
=========================

* Declare data members of UCT nodes and signature statistis as volatile.
  This avoids that the compiler reorders writes, which could cause crashes
  if the UCT search is used in lock-free mode.
* Fix bug that caused reusing the subtree not to work (if options
  reuse_subtree or ponder were used)


Version 0.1 - 2008 May 30
=========================
