@@ -10,6 +10,7 @@ Current development version (branch VERSION_0_3_FIXES)
 
 * Fix bug in SgTimeControl that caused it to allocate infinite time for move
   if GetPositionInfo() returned zero for remaining moves
+* Fix GoKomi::ToString() for komi -0.5
 * Add missing files regression/*.suite to distribution
 * Small fixes in documentation
 
